# CandidateV

./: .buildpacks  .env.example  .gitattributes  .gitignore  .vercelignore  AUTH-README.md  Aptfile  CandidateV Application_ Comprehensive AI Implementation Guide.md  CandidateV Application_ User Journey Flows.md  CandidateV_Development_Instructions.md  CandidateV_Implementation_Checklist.md  CandidateV_Startup_Guide.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  KeyGen.py  README-RAILWAY.md  README.md  SETUP.md  TESTING.md  api-routing-guide.md  api_key_patterns.txt  auth-debug.js  browser-code.js  cv_parsing_plan.md  debugging_lessons_learned.md  docker-compose.yml  generate-valid-token.js  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.toml  requirements.txt  routing-refactor-plan.md  setup.py  simplified-gateway.js  tatus  (+7 more)
backend/auth_service_v2/: .dockerignore  .env.example  .railway.toml  .railwayignore  CLEANUP.md  Dockerfile  PROGRESS.md  Procfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  setup.py  test_db.py  test_output.txt
backend/auth_service_v2/alembic/: env.py
backend/auth_service_v2/app/: __init__.py  main.py
backend/auth_service_v2/docs/: audit_api.md  audit_runbook.md
backend/auth_service_v2/scripts/: manual_db_test.py  setup_test_db.py  test_alembic.py  test_db.py  test_db_connection.py
backend/auth_service_v2/tests/: TEST_COVERAGE.md  conftest.py  conftest.py.old  test_audit.py  test_db.py  (+6 more)
(+398 files in other folders)
